# faast_advanced_course

./: README.md
.github/workflows/: main.yml
assignments/: pyproject.toml
assignments/assignment_1/life_expectancy_backup/: cleaning.py
assignments/assignment_1/life_expectancy_backup/tests/: test_cleaning.py
assignments/assignment_3/life_expectancy_backup/tests/: test_cleaning.py
assignments/life_expectancy/: cleaning.py  context.py  debug.ipynb  load_data.py  main.py  regions.py  regions_enum.py  save_data.py
assignments/life_expectancy/data/: test.csv
assignments/life_expectancy/tests/: conftest.py  gen_data_subset.py  test_cleaning.py  test_load_data.py  test_regions.py  test_regions_enum.py  test_save_data.py
assignments/life_expectancy/tests/fixtures/: eu_life_expectancy_raw.tsv
