[project]
name = "life_expectancy"
version = "0.1.0"
description = "First assignment of the Foundations Learning Path"
authors = [{name = "João Raimundo", email ="joao.raimundo@nos.pt"}]
dependencies = ["argparse", "pandas", "numpy"]

readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest", "pylint", "pytest-cov", "toml", "mypy"]

[tool.coverage.run]
omit = [
    "*/conftest.py", "*/test*", # omit test files
]

[tool.coverage.report]
fail_under = 80

[tool.setuptools]
packages = ["life_expectancy"]


[tool.pylint."messages control"]
disable = [
   "missing-module-docstring",
   "anomalous-backslash-in-string",
   "trailing-whitespace"
]

[project.scripts]
life_expectancy = "life_expectancy.cleaning:main"